@@ -34,6 +34,9 @@ import android.database.Cursor;
 import android.database.SQLException;
 import android.database.sqlite.SQLiteDatabase;
 import android.database.sqlite.SQLiteStatement;
+//import net.sqlcipher.database.SQLiteDatabase;
+//import net.sqlcipher.database.SQLiteStatement;
+import android.os.Environment;
 import android.util.Log;
 
 import com.android.dataframework.DataFramework;
@@ -51,13 +54,55 @@ public class DataBaseHelper {
 	 * Field for access to the database backend
 	 */
 	private DataFramework db;
+	/**
+	 * Application context
+	 */
+	private Context mCtx;
+	/**
+	 * Application preferences
+	 */
+	//private Preferences prefs = new Preferences();
+	/**
+	 * Database passphrase
+	 */
+	//private String DBKey;
+	/**
+	 * Database passphrase length
+	 */
+	//private int DB_KEY_LENGTH = 128;
 
 	/**
 	 * Constructor
 	 * @param database Previously instantiated DataFramework object
 	 */
-	public DataBaseHelper(DataFramework database) {
-		db = database;
+	public DataBaseHelper(Context ctx) {		
+		mCtx = ctx;
+		//prefs.getPreferences(mCtx);
+		//DBKey = prefs.getDBKey();
+		db = DataFramework.getInstance();
+		
+		//Initialize SQLCipher libraries
+		//SQLiteDatabase.loadLibs(mCtx);
+		
+		//If the passphrase is empty, generate a random passphrase and recreate database
+		/*if(DBKey.equals("")) {
+			DBKey = Global.randomString(DB_KEY_LENGTH);
+			prefs.setDBKey(DBKey);
+			mCtx.deleteDatabase("swadroid_db");*/
+			//SQLiteDatabase database = SQLiteDatabase.openOrCreateDatabase(mCtx.getDatabasePath("swadroid_db_crypt"), DBKey, null);
+			//database.close();
+		/*}
+		
+		Log.d("DataBaseHelper", "DBKey=" + DBKey);*/
+		
+		try {
+			//db.open(mCtx, mCtx.getPackageName(), DBKey);
+			db.open(mCtx, mCtx.getPackageName());
+		} catch (XmlPullParserException e) {
+			e.printStackTrace();
+		} catch (IOException e) {
+			e.printStackTrace();
+		}
 	}
 
 	/**
@@ -101,12 +146,31 @@ public class DataBaseHelper {
 		} else if(table.equals(Global.DB_TABLE_USERS_COURSES)) {
 			firstParam = "userCode";
 			secondParam = "crsCod";
-		} else {
+		}else if(table.equals(Global.DB_TABLE_GROUPS_COURSES)){
+			firstParam = "grpCod";
+			secondParam = "crsCod";
+		}else if(table.equals(Global.DB_TABLE_GROUPS_GROUPTYPES)){
+			firstParam = "grpTypCod";
+			secondParam = "grpCod";
+		}else {
 			Log.e("selectParamsPairTable", "Table " + table + " not exists");
 		}
 
 		return new Pair<String, String>(firstParam, secondParam);
 	}
+	/**
+	 * Gets ParTable class from table
+	 * @param <T>
+	 * */
+/*	private <T> PairTable<T, T> getPairTable(String table, T firstValue, T secondValue){
+		PairTable<T,T> par;
+		if(table.equals(Global.DB_TABLE_GROUPS_GROUPTYPES)){
+			par = new PairTable<T,T>(table,firstValue,secondValue);
+		}
+		return new Pair<Class,Class>(firstClass,secondClass);
+	}*/
+	
+	
 
 	/**
 	 * Creates a Model's subclass object looking at the table selected
@@ -122,11 +186,12 @@ public class DataBaseHelper {
 
 		if(table.equals(Global.DB_TABLE_COURSES)) {
 			o = new Course(ent.getInt("id"),
-					ent.getString("name"),
-					ent.getInt("userRole"));
+					ent.getInt("userRole"),
+					ent.getString("shortName"),
+					ent.getString("fullName"));
 		} else if(table.equals(Global.DB_TABLE_TEST_QUESTIONS_COURSE) ||
 				table.equals(Global.DB_TABLE_TEST_QUESTION_ANSWERS) ||
-				table.equals(Global.DB_TABLE_USERS_COURSES)) {
+				table.equals(Global.DB_TABLE_USERS_COURSES) || table.equals(Global.DB_TABLE_GROUPS_COURSES) || table.equals(Global.DB_TABLE_GROUPS_GROUPTYPES)) {
 
 			params = selectParamsPairTable(table);
 
@@ -139,7 +204,8 @@ public class DataBaseHelper {
 					ent.getLong("eventTime"), 
 					ent.getString("userSurname1"), 
 					ent.getString("userSurname2"), 
-					ent.getString("userFirstname"), 
+					ent.getString("userFirstname"),  
+					ent.getString("userPhoto"), 
 					ent.getString("location"), 
 					ent.getString("summary"), 
 					ent.getInt("status"), 
@@ -207,11 +273,23 @@ public class DataBaseHelper {
 					ent.getString("userFirstname"),
 					ent.getString("photoPath"),
 					ent.getInt("userRole"));			
-		} else if(table.equals(Global.DB_TABLE_GROUPS)) {
-			o = new Group(ent.getInt("groupCode"),
+		} else if (table.equals(Global.DB_TABLE_GROUPS)){
+			long groupTypeCode = getGroupTypeCodeFromGroup(ent.getLong("id"));
+			o = new Group(ent.getLong("id"),
 					ent.getString("groupName"),
-					ent.getInt("groupTypeCode"),
-					ent.getString("groupTypeName"));
+					groupTypeCode,
+					ent.getInt("maxStudents"),
+					ent.getInt("open"),
+					ent.getInt("students"),
+					ent.getInt("fileZones"),
+					ent.getInt("member"));
+		}else if (table.equals(Global.DB_TABLE_GROUP_TYPES)){
+			o = new GroupType(ent.getLong("id"),
+					ent.getString("groupTypeName"),
+					ent.getLong("courseCode"),
+					ent.getInt("mandatory"),
+					ent.getInt("multiple"),
+					ent.getLong("openTime"));
 		} else if(table.equals(Global.DB_TABLE_PRACTICE_SESSIONS)) {
 			SimpleDateFormat format = new SimpleDateFormat("dd/MM/yyyy HH:mm");
 
@@ -284,6 +362,7 @@ public class DataBaseHelper {
 	 * @param fieldName Field's name
 	 * @param fieldValue Field's value
 	 * @return A Model's subclass object
+	 * 			or null if the row does not exist in the specified table
 	 */
 	public Model getRow(String table, String fieldName, String fieldValue)
 	{
@@ -373,42 +452,138 @@ public class DataBaseHelper {
 		}
 		return sessions;
 	}
-
+	
+	/**
+	 * Gets the group which code is given
+	 * @param groupId long that identifies uniquely the searched group
+	 * @return group with the referenced code in case it exits
+	 * 			null otherwise
+	 * */
 	public Group getGroup(long groupId) {
 		String table = Global.DB_TABLE_GROUPS;
-		List<Entity> rows = db.getEntityList(table, "groupCode = " + groupId);
-
-		if (rows != null) {
-			Iterator<Entity> iter = rows.iterator();
-			while (iter.hasNext()) {
-				Entity ent = iter.next();
-				return (Group) createObjectByTable(table, ent);			}			
-		}
-		return null;
+		List<Entity> rows =  db.getEntityList(table, "id = " + groupId);
+		Group g = null;
+		if (rows != null) 
+			g = (Group) createObjectByTable(table, rows.get(0));
+		return g;
 	}
 
 	/**
 	 * Gets the group codes in the selected course
 	 * @param courseCode Course code to be referenced
-	 * @return A list of User's id
+	 * @return A list of group codes belonging to the selected course 
 	 */
-	public List<Long> getGroupsCourse(long courseCode) {
+	public List<Long> getGroupCodesCourse(long courseCode) {
 		List<Long> result = new ArrayList<Long>();
 
-		//List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUPS_COURSES, "crsCod = '" + courseCode + "'");
-		List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUPS, "groupTypeCode = '4321'");
+		List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUPS_COURSES, "crsCod = '" + courseCode + "'");
 		if (rows != null) {
 			Iterator<Entity> iter = rows.iterator();
 			while (iter.hasNext()) {
 				Entity ent = iter.next();
-				//result.add(ent.getLong("grpCod"));
-				result.add(ent.getLong("groupCode"));
+				result.add(ent.getLong("grpCod"));
 			}
 		}
 
 		return result;
 	}
+	/**
+	 * Gets the groups belonging to the selected type of group 
+	 * @param groupTypeCode group type code to be referenced
+	 * @return List of Groups 
+	 * */
+	public List <Group> getGroupsOfType(long groupTypeCode){
+		List <Group> groups = new ArrayList<Group>();
+		List <Long> groupCodes = getGroupsCodesOfType(groupTypeCode);
+		if(!groupCodes.isEmpty()){
+			Iterator<Long> iter = groupCodes.iterator();
+			while(iter.hasNext()){
+				groups.add((Group)getRow(Global.DB_TABLE_GROUPS,"id",String.valueOf(iter.next())));
+			}
+		}
+		
+		return groups;
+	}
+	/**
+	 * 
+	 * */
+	public Cursor getCursorGroupsOfType(long groupTypeCode){
+		String select = "SELECT g.* "+
+				" FROM " +
+				Global.DB_TABLE_GROUPS + " g, " + Global.DB_TABLE_GROUPS_GROUPTYPES + " ggt" +
+				" WHERE " +
+				"g.id = ggt.grpCod AND ggt.grpTypCod = ? ORDER BY groupName";
 
+		SQLiteDatabase db = DataFramework.getInstance().getDB();
+		//TODO sustituir rawquery por getCursor(String table, String[] fields, String selection, 
+		//String[] selectionArgs, String groupby, String having, String orderby, String limit)
+		return db.rawQuery(select, new String [] { String.valueOf(groupTypeCode) });
+
+	}
+
+	public Cursor getCursor(String table, String where, String orderby){
+		return db.getCursor(table, where, orderby);
+	}
+	public Cursor getCursorGroupType(long courseCode){
+		return db.getCursor(Global.DB_TABLE_GROUP_TYPES, "courseCode =" + courseCode, "groupTypeName");
+	}
+	
+	public GroupType getGroupTypeFromGroup(long groupCode){
+		long groupTypeCode = getGroupTypeCodeFromGroup(groupCode);
+		return (GroupType) getRow(Global.DB_TABLE_GROUP_TYPES,"id",String.valueOf(groupTypeCode));
+		
+	}
+	/**
+	 * Gets the code of the group type belonging the group with the given group code
+	 * @param groupCode long that specifies the code of the group
+	 * @return group type code in case the given group belongs to a group type
+	 * 			-1 	 otherwise
+	 * */
+	public long getGroupTypeCodeFromGroup(long groupCode){
+		List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUPS_GROUPTYPES, "grpCod = '" + groupCode +"'");
+		long groupTypeCode = -1;
+		if(!rows.isEmpty()){
+			groupTypeCode = rows.get(0).getLong("grpTypCod");
+		}
+		return groupTypeCode;
+		
+	}
+
+	/**
+	 * Gets the codes of groups belonging the selected type of group
+	 * @param groupTypeCode group type code to be referenced
+	 * @return List of group codes 
+	 * */
+	private List<Long> getGroupsCodesOfType(long groupTypeCode){
+		List <Long> groupCodes = new ArrayList<Long>();
+		List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUPS_GROUPTYPES, "grpTypCod = '" + groupTypeCode +"'");
+		if(rows != null){
+			Iterator<Entity> iter = rows.iterator();
+			while(iter.hasNext()){
+				groupCodes.add(iter.next().getLong("grpCod"));
+			}
+		}
+		return groupCodes;
+	}
+	
+	/**
+	 * Get groups belonging to the referred course to which the logged user is enrolled 
+	 * @param courseCode course code to which the groups belong
+	 * @return List of the group 
+	 * */
+	public List<Group> getUserLoggedGroups(long courseCode){
+		List<Long> groupCodes = getGroupCodesCourse(courseCode);
+		List<Group> groups = new ArrayList<Group>();
+		if(!groupCodes.isEmpty()){
+			Iterator<Long> iter = groupCodes.iterator();
+			while(iter.hasNext()){
+				Group g = (Group) getRow(Global.DB_TABLE_GROUPS,"id",String.valueOf(iter.next()));
+				if(g.isMember()) groups.add(g);
+			}
+		}
+		return groups;
+	}
+	
 	/**
 	 * Gets the practice groups in the selected course
 	 * @param courseCode Course code to be referenced
@@ -416,11 +591,11 @@ public class DataBaseHelper {
 	 */
 	public Cursor getPracticeGroups(long courseCode) {
 		String select = "SELECT " +
-				"g._id, g.groupCode, g.groupName" +
+				"g._id, g.id, g.groupName" +
 				" FROM " +
 				Global.DB_TABLE_GROUPS + " g, " + Global.DB_TABLE_GROUPS_COURSES + " gc" +
 				" WHERE " +
-				"g.groupCode = gc.grpCod AND g.groupTypeCode = 4321 AND gc.crsCod = ?";
+				"g.id = gc.grpCod AND gc.crsCod = ?";
 
 		SQLiteDatabase db = DataFramework.getInstance().getDB();
 		return db.rawQuery(select, new String [] { String.valueOf(courseCode) });
@@ -483,6 +658,25 @@ public class DataBaseHelper {
 	}
 
 	/**
+	 * Gets the groups that owns the selected course 
+	 * @param courseCode Course code to be referenced
+	 * @return Cursor access to the groups
+	 * */
+	public List<Group> getGroups(long courseCode){
+		String select = "SELECT grpCod FROM " + Global.DB_TABLE_GROUPS_COURSES + " WHERE crsCod = " + courseCode +";";  
+		Cursor groupCodes = db.getDB().rawQuery(select, null);
+		
+		List<Group> groups = new ArrayList<Group>(groupCodes.getCount());
+
+		while (groupCodes.moveToNext()){
+			Group group = (Group)this.getRow(Global.DB_TABLE_GROUPS, "id", String.valueOf(groupCodes.getInt(0)));
+			groups.add(group);
+		}
+		return groups;
+	}
+	
+	
+	/**
 	 * Inserts a course in database
 	 * @param c Course to be inserted
 	 */
@@ -490,8 +684,9 @@ public class DataBaseHelper {
 	{
 		Entity ent = new Entity(Global.DB_TABLE_COURSES);
 		ent.setValue("id", c.getId());
-		ent.setValue("name", c.getName());
 		ent.setValue("userRole", c.getUserRole());
+		ent.setValue("shortName", c.getShortName());
+		ent.setValue("fullName", c.getFullName());
 		ent.save();
 	}
 
@@ -512,6 +707,7 @@ public class DataBaseHelper {
 		ent.setValue("userSurname1", n.getUserSurname1());
 		ent.setValue("userSurname2", n.getUserSurname2());
 		ent.setValue("userFirstname", n.getUserFirstName());
+		ent.setValue("userPhoto", n.getUserPhoto());
 		ent.setValue("location", n.getLocation());
 		ent.setValue("summary", n.getSummary());
 		ent.setValue("status", status);
@@ -620,7 +816,67 @@ public class DataBaseHelper {
 		ent.setValue(params.getSecond(), p.getSecond());
 		ent.save();
 	}
+	/**
+	 * Inserts a new row or updates an existing one in the table named @a tableName with the data that contains @a currentModel
+	 * @param tableName string with the table name
+	 * @param currentModel model with the new data
+	 * @param ents vector of entities. In case this param is given, the entities given will be modified
+	 * 
+	 * */
+	
+	public boolean insertEntity(String tableName, Model currentModel,Entity...ents){
+		boolean returnValue = true;
+		Entity ent;
+		if(ents.length>= 1){
+			ent = ents[0];
+		}else{
+			ent = new Entity(tableName);
+		}
+		if(tableName.compareTo(Global.DB_TABLE_GROUPS) == 0){
+			Group g = (Group) currentModel;
+			ent.setValue("id", g.getId());
+			ent.setValue("groupName", g.getGroupName());
+			ent.setValue("maxStudents", g.getMaxStudents());
+			ent.setValue("students", g.getCurrentStudents());
+			ent.setValue("open", g.getOpen());
+			ent.setValue("fileZones", g.getDocumentsArea());
+			ent.setValue("member", g.getMember());
+			ent.save();
+		}
+		
+		if(tableName.compareTo(Global.DB_TABLE_GROUP_TYPES) == 0){
+			GroupType gt = (GroupType) currentModel;
+			ent.setValue("id", gt.getId());
+			ent.setValue("groupTypeName", gt.getGroupTypeName());
+			ent.setValue("courseCode", gt.getCourseCode());
+			ent.setValue("mandatory", gt.getMandatory());
+			ent.setValue("multiple", gt.getMultiple());
+			ent.setValue("openTime", gt.getOpenTime());
+			ent.save();
+		}
+			
+		return returnValue;
+	}
+	/**
+	 * Inserts a relation in database
+	 * @param p Relation to be inserted
+	 */
+/*	public void insertPairTable(String table)
+	{
+		Pair<Class, Class> pairClass = selectParamsClassPairTable(table);
+		class T1 = pairClass.getFirst();
+		
+		Pair<String,String> pairParams = selectParamsPairTable(table);
+		PairTable<pairClass.getFirst(), pairClass.getSecond()> 
+		String table = p.getTable();
+		Pair<String, String> params = selectParamsPairTable(table);
 
+		Entity ent = new Entity(table);
+		ent.setValue(params.getFirst(), p.getFirst());
+		ent.setValue(params.getSecond(), p.getSecond());
+		ent.save();
+	}
+*/
 	/**
 	 * Inserts a user in database or updates it if already exists
 	 * @param u User to be inserted
@@ -634,7 +890,10 @@ public class DataBaseHelper {
 		} else {
 			// If user exists and has photo, delete the old photo file
 			if (u.getPhotoFileName() != null) {
-				File file = new File(db.getContext().getExternalFilesDir(null), u.getPhotoFileName());
+				File externalPath = Environment.getExternalStorageDirectory();
+				String packageName = db.getContext().getPackageName();
+				File file = new File(externalPath.getAbsolutePath() + "/Android/data/" + packageName+ "/", u.getPhotoFileName());
+				//File file = new File(db.getContext().getExternalFilesDir(null), u.getPhotoFileName());
 				file.delete();
 			}
 			ent = rows.get(0);
@@ -645,7 +904,7 @@ public class DataBaseHelper {
 		ent.setValue("userSurname1", u.getUserSurname1());
 		ent.setValue("userSurname2", u.getUserSurname2());
 		ent.setValue("userFirstname", u.getUserFirstname());
-		ent.setValue("photoPath", u.getPhotoPath());
+		ent.setValue("photoPath", u.getUserPhoto());
 		ent.setValue("userRole", u.getUserRole());
 		ent.save();
 	}
@@ -656,25 +915,137 @@ public class DataBaseHelper {
 	 * @param courseCode Course code to be referenced
 	 */
 	public boolean insertGroup(Group g, long courseCode) {
-		List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUPS, "groupCode = " + g.getId());
-
+		List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUPS, "id = " + g.getId());
+		boolean returnValue = true;
 		if(rows.isEmpty()) {
-			Entity ent = new Entity(Global.DB_TABLE_GROUPS);
+			insertEntity(Global.DB_TABLE_GROUPS,g);
+		} else { //already exits a group with the given code. just update
+			insertEntity(Global.DB_TABLE_GROUPS,g,rows.get(0));
+			
+		}
+		//update all the relationship			
+			long groupCode = g.getId();
+			rows = db.getEntityList(Global.DB_TABLE_GROUPS_COURSES,"grpCod =" + groupCode);
+			Course course = (Course) getRow(Global.DB_TABLE_COURSES,"id",String.valueOf(courseCode));
+			//course code is a foreign key. Therefore, to avoid a database error,
+			//it should not insert/modify rows in the relationship table if the course does not exists
+			if(course != null){ 
+				if(rows.isEmpty()){
+					PairTable<Long,Long> pair = new PairTable(Global.DB_TABLE_GROUPS_COURSES,g.getId(),courseCode);
+					insertPairTable(pair);
+				}else{ 
+					rows.get(0).setValue("crsCod", courseCode);
+					rows.get(0).save();
+				}
+			}else returnValue = false;
+			
+			long groupTypeCode = g.getGroupTypeCode();
+			
+			//WHILE THE WEB SERVICE TO GET GROUP TYPES STILL UNAVAILABLE, this condition is not evaluated
+			//GroupType groupType = (GroupType) getRow(Global.DB_TABLE_GROUP_TYPES,"id",String.valueOf(groupTypeCode));
+			//group type code is a foreign key. Therefore, to avoid a database error,
+			//it should not insert/modify rows in the relationship table if the group type does not exists
+			//if(groupType != null){
+				rows = db.getEntityList(Global.DB_TABLE_GROUPS_GROUPTYPES,"grpCod="+groupCode);
+				if(rows.isEmpty()){
+					Pair<String,String> params = selectParamsPairTable(Global.DB_TABLE_GROUPS_GROUPTYPES);
+					insertPairTable(new PairTable<Long,Long>(Global.DB_TABLE_GROUPS_GROUPTYPES,groupTypeCode,groupCode));
+				}else{
+					PairTable<Integer,Integer> prev = new PairTable(Global.DB_TABLE_GROUPS_GROUPTYPES,rows.get(0).getValue("grpTypCod"),rows.get(0).getValue("grpCod"));
+					PairTable<Integer,Integer> current = new PairTable(Global.DB_TABLE_GROUPS_GROUPTYPES,groupTypeCode,groupCode);
+					updatePairTable(prev,current);
+				}
+			/*}else returnValue = false;*/
+			
+			return returnValue;
+	}
 
-			ent.setValue("groupCode", g.getId());
-			ent.setValue("groupName", g.getGroupName());
-			ent.setValue("groupTypeCode", g.getGroupTypeCode());
-			ent.setValue("groupTypeName", g.getGroupTypeName());
-			ent.save();
+	/**
+	 * Insert a new group type in the database or updated if the group type exits already in the data base
+	 * @param gt Group Type to be inserted
+	 * */
+	public boolean insertGroupType(GroupType gt){
+		boolean returnValue = true;
+		GroupType row = (GroupType)getRow(Global.DB_TABLE_GROUP_TYPES,"id",String.valueOf(gt.getId()));
+		if(row == null){
+			insertEntity(Global.DB_TABLE_GROUP_TYPES,gt);
+		}else{
+			returnValue = false;
+		}
+		return returnValue;
+	}
+	
+	public boolean insertCollection(String table,List<Model> currentModels, long...courseCode){
+		boolean result = true;
+		List<Model> modelsDB = getAllRows(table);
+		List<Model> newModels = new ArrayList<Model>();
+		List<Model> obsoleteModel = new ArrayList<Model>();
+		List<Model> modifiedModel = new ArrayList<Model>();
+		
+		newModels.addAll(currentModels);
+		newModels.removeAll(modelsDB);
+		
+		obsoleteModel.addAll(modelsDB);
+		obsoleteModel.removeAll(currentModels);
+		
+		modifiedModel.addAll(currentModels);
+		modifiedModel.removeAll(newModels);
+		modifiedModel.removeAll(obsoleteModel);
+		
+		if(table.compareTo(Global.DB_TABLE_GROUP_TYPES) == 0){
+			for(int i = 0; i < obsoleteModel.size(); ++i){
+				long code = obsoleteModel.get(i).getId();
+				removeAllRow(table,"id", code);
+				removeAllRow(Global.DB_TABLE_GROUPS_GROUPTYPES,"grpTypCod", code);
+			}
+			for(int i = 0; i < newModels.size(); ++i){
+				Model model = newModels.get(i);
+				insertEntity(table,model);
+			}
+			List<Entity> rows; 
+			for(int i = 0; i < modifiedModel.size(); ++i){
+				Model m = modifiedModel.get(i);
+				rows = db.getEntityList(table, "id="+ m.getId());
+				insertEntity(table,m,rows.get(0));
+			}
+		}
+		
+		if(table.compareTo(Global.DB_TABLE_GROUPS) == 0){
+			for(int i = 0; i < obsoleteModel.size(); ++i){
+				long code = obsoleteModel.get(i).getId();
+				removeAllRow(table,"id", code);
+				removeAllRow(Global.DB_TABLE_GROUPS_GROUPTYPES,"grpCod", code);
+				removeAllRow(Global.DB_TABLE_GROUPS_COURSES,"grpCod",code);
+			}
+			for(int i = 0; i < newModels.size(); ++i){
+				Model model = newModels.get(i);
+				insertGroup((Group) model, courseCode[0]);
+			}
+			List<Entity> rows; 
+			for(int i = 0; i < modifiedModel.size(); ++i){
+				Model model = modifiedModel.get(i);
+				insertGroup((Group) model, courseCode[0]);
+			}
+		}
+		
+		return result;
+	}
+	
+	/**
+	 * Inserts the rollcall data of a student to a practice session in database
+	 * @param l User code of student
+	 * @param sessCode Practice session code
+	 */
+	public void insertRollcallData(long l, long sessCode) {
+		List<Entity> rows = db.getEntityList(Global.DB_TABLE_ROLLCALL, "sessCod = " + sessCode + " AND usrCod = " + l);
 
-			// TODO: Do not insert in groups_courses until getGroups is fixed
-			ent = new Entity(Global.DB_TABLE_GROUPS_COURSES) ;
-			ent.setValue("grpCod", g.getId());
-			ent.setValue("crsCod", courseCode);
+		if (rows.isEmpty()) {
+			Entity ent = new Entity(Global.DB_TABLE_ROLLCALL);
+
+			ent.setValue("sessCod", sessCode);
+			ent.setValue("usrCod", l);
 			ent.save();
-			return true;
-		} else
-			return false;
+		}
 	}
 
 	/**
@@ -712,22 +1083,6 @@ public class DataBaseHelper {
 		}
 	}
 
-	/**
-	 * Inserts the rollcall data of a student to a practice session in database
-	 * @param l User code of student
-	 * @param sessCode Practice session code
-	 */
-	public void insertRollcallData(long l, long sessCode) {
-		List<Entity> rows = db.getEntityList(Global.DB_TABLE_ROLLCALL, "sessCod = " + sessCode + " AND usrCod = " + l);
-
-		if (rows.isEmpty()) {
-			Entity ent = new Entity(Global.DB_TABLE_ROLLCALL);
-
-			ent.setValue("sessCod", sessCode);
-			ent.setValue("usrCod", l);
-			ent.save();
-		}
-	}
 
 	/**
 	 * Inserts a new record in database indicating that the user belongs 
@@ -765,8 +1120,9 @@ public class DataBaseHelper {
 		List<Entity> rows = db.getEntityList(Global.DB_TABLE_COURSES, "id = " + prev.getId());
 		Entity ent = rows.get(0);
 		ent.setValue("id", actual.getId());
-		ent.setValue("name", actual.getName());
 		ent.setValue("userRole", actual.getUserRole());
+		ent.setValue("shortName", actual.getShortName());
+		ent.setValue("fullName", actual.getFullName());
 		ent.save();
 	}
 
@@ -781,8 +1137,9 @@ public class DataBaseHelper {
 		if(!rows.isEmpty()){
 			Entity ent = rows.get(0);
 			ent.setValue("id", actual.getId());
-			ent.setValue("name", actual.getName());
 			ent.setValue("userRole", actual.getUserRole());
+			ent.setValue("shortName", actual.getShortName());
+			ent.setValue("fullName", actual.getFullName());
 			ent.save();
 		}
 	}
@@ -917,17 +1274,19 @@ public class DataBaseHelper {
 	{
 		String table = prev.getTable();
 		String where;
-		Integer first = (Integer) prev.getFirst();
-		Integer second = (Integer) prev.getSecond();
+		//Integer first = (Integer) prev.getFirst();
+		//Integer second = (Integer) prev.getSecond();
 		Pair<String, String> params = selectParamsPairTable(table);
 
-		where = params.getFirst() + " = " + first + " AND " + params.getSecond() + " = " + second;
+		where = params.getFirst() + " = " + prev.getFirst() + " AND " + params.getSecond() + " = " + prev.getSecond();
 
 		List<Entity> rows = db.getEntityList(table, where);
-		Entity ent = rows.get(0);
-		ent.setValue(params.getFirst(), actual.getFirst());
-		ent.setValue(params.getSecond(), actual.getSecond());
-		ent.save();
+		if(!rows.isEmpty()){
+			Entity ent = rows.get(0);
+			ent.setValue(params.getFirst(), actual.getFirst());
+			ent.setValue(params.getSecond(), actual.getSecond());
+			ent.save();
+		}
 	}
 
 	/**
@@ -944,9 +1303,67 @@ public class DataBaseHelper {
 		ent.setValue("userSurname1", actual.getUserSurname1());
 		ent.setValue("userSurname2", actual.getUserSurname2());
 		ent.setValue("userFirstname", actual.getUserFirstname());
-		ent.setValue("photoPath", actual.getPhotoPath());
+		ent.setValue("userPhoto", actual.getUserPhoto());
 		ent.setValue("userRole", actual.getUserRole());
 		ent.save();
+	}
+	
+	/**
+	 * Updates a Group and the relationship between Groups and Courses
+	 * @param groupCode code of the group to be updated
+	 * @param courseCode current code of the course related to the group
+	 * @param currentGroup updated group
+	 * */
+	public boolean updateGroup(long groupCode, long courseCode, Group currentGroup, long ... groupTypeCode){
+		List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUPS, "id =" + groupCode);
+		if(!rows.isEmpty()){
+			Entity ent = rows.get(0);
+			boolean returnValue = true;
+			insertEntity(Global.DB_TABLE_GROUPS,currentGroup,ent);
+			
+			rows = db.getEntityList(Global.DB_TABLE_GROUPS_COURSES,"grpCod =" + groupCode);
+			Course course = (Course) getRow(Global.DB_TABLE_COURSES,"id",String.valueOf(courseCode));
+			//course code is a foreign key. Therefore, to avoid a database error,
+			//it should not insert/modify rows in the relationship table if the course does not exists
+			if(course != null){ 
+				if(rows.isEmpty()){
+					ent = new Entity(Global.DB_TABLE_GROUPS_COURSES);
+					ent.setValue("grpCod", groupCode);
+					ent.setValue("crsCod", courseCode);
+					ent.save();	
+				}else{ 
+					rows.get(0).setValue("crsCod", courseCode);
+					rows.get(0).save();
+				}
+			}else returnValue = false;
+			
+			if(groupTypeCode.length > 0){
+				GroupType groupType = (GroupType) getRow(Global.DB_TABLE_GROUP_TYPES,"id",String.valueOf(groupTypeCode[0]));
+				//group type code is a foreign key. Therefore, to avoid a database error,
+				//it should not insert/modify rows in the relationship table if the group type does not exists
+				if(groupType != null){
+					rows = db.getEntityList(Global.DB_TABLE_GROUPS_GROUPTYPES,"grpCod="+groupCode);
+					if(!rows.isEmpty()){
+						Pair<String,String> params = selectParamsPairTable(Global.DB_TABLE_GROUP_TYPES);
+						insertPairTable(new PairTable<Long,Long>(Global.DB_TABLE_GROUPS_GROUPTYPES,groupTypeCode[0],groupCode));
+
+					}else{
+						PairTable<Integer,Integer> prev = new PairTable(Global.DB_TABLE_GROUPS_GROUPTYPES,rows.get(0).getValue("grpTypCod"),rows.get(0).getValue("grpCod"));
+						PairTable<Integer,Integer> current = new PairTable(Global.DB_TABLE_GROUPS_GROUPTYPES,groupTypeCode[0],groupCode);
+						updatePairTable(prev,current);
+
+					}
+				}else returnValue = false;
+			}
+			return returnValue;
+		}else
+			return false;
+	}
+	
+	private <T> boolean updateRelationship(Pair<String,String> tables, Pair<String,String> idsTables, String relationTable, Pair<String,T> remainField, Pair<String,T> changedField){
+		
+		
+		return true;
 	}
 
 	/**
@@ -954,14 +1371,29 @@ public class DataBaseHelper {
 	 * @param prev Group to be updated
 	 * @param actual Updated group
 	 */
-	public void updateGroup(Group prev, Group actual) {
+	public void updateGroup(Group prev, Group currentGroup) {
 		List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUPS, "id = " + prev.getId());
-		Entity ent = rows.get(0);
-		ent.setValue("groupCode", actual.getId());
-		ent.setValue("groupName", actual.getGroupName());
-		ent.setValue("groupTypeCode", actual.getGroupTypeCode());
-		ent.setValue("groupTypeName", actual.getGroupTypeName());
-		ent.save();
+		if(!rows.isEmpty()){
+			insertEntity(Global.DB_TABLE_GROUPS,currentGroup,rows.get(0));
+		}
+		if(prev.getId() != currentGroup.getId()){
+			//TODO in this case, the relationships with group types and courses should be updated
+			
+		}
+	}
+
+
+	/**
+	 * Updates an existing group type
+	 * */
+	private boolean updateGroupType(GroupType prv, GroupType current){
+		List<Entity> rows = db.getEntityList(Global.DB_TABLE_GROUP_TYPES, "id="+prv.getId());
+		boolean returnValue = true;
+		if(!rows.isEmpty()){
+			Entity ent = rows.get(0); //the group type with a given group type code is unique
+			insertEntity(Global.DB_TABLE_GROUP_TYPES,current,ent);
+		}else returnValue = false;
+		return returnValue;
 	}
 
 	/**
@@ -971,7 +1403,10 @@ public class DataBaseHelper {
 	public void removeUser(User u) {
 		removeRow(Global.DB_TABLE_USERS, u.getId());
 
-		File file = new File(db.getContext().getExternalFilesDir(null), u.getPhotoFileName());
+		File externalPath = Environment.getExternalStorageDirectory();
+		String packageName = db.getContext().getPackageName();
+		File file = new File(externalPath.getAbsolutePath() + "/Android/data/" + packageName+ "/", u.getPhotoFileName());
+		//File file = new File(db.getContext().getExternalFilesDir(null), u.getPhotoFileName());
 		file.delete();
 	}
 
@@ -981,6 +1416,10 @@ public class DataBaseHelper {
 	 */
 	public void removeGroup(Group g) {
 		removeRow(Global.DB_TABLE_GROUPS, g.getId());
+		
+		//Remove also relationships with courses and group types
+		removeAllRow(Global.DB_TABLE_GROUPS_GROUPTYPES,"grpCod",g.getId());
+		removeAllRow(Global.DB_TABLE_GROUPS_COURSES,"grpCod",g.getId());
 	}
 
 	/**
@@ -992,6 +1431,19 @@ public class DataBaseHelper {
 		List<Entity> rows = db.getEntityList(table, "id = " + id);
 		Entity ent = rows.get(0);		
 		ent.delete();
+	}
+	/**
+	 * Removes all rows from a database table where fieldName has the given value as value
+	 * @param fieldName Name field to search
+	 * @param value Value field of row to be removed
+	 */
+	public void removeAllRow(String table, String fieldName ,long value)
+	{
+		List<Entity> rows = db.getEntityList(table, fieldName + "= " + value);
+		for(int i = 0; i < rows.size(); ++i){
+			Entity ent = rows.get(i);		
+			ent.delete();
+		}
 	}
 
 	/**
@@ -1109,7 +1561,8 @@ public class DataBaseHelper {
 	 * @return A list of the questions of specified course and tags
 	 */
 	public List<TestQuestion> getRandomCourseQuestionsByTagAndAnswerType(long selectedCourseCode, List<TestTag> tagsList,
-			List<String> answerTypesList, int maxQuestions) {
+			List<String> answerTypesList, int maxQuestions)
+			{
 		String select = "SELECT DISTINCT Q.id, Q.ansType, Q.shuffle, Q.stem";
 		String tables = " FROM " + Global.DB_TABLE_TEST_QUESTIONS + " AS Q, "
 				+ Global.DB_TABLE_TEST_QUESTIONS_COURSE + " AS C, "
@@ -1185,7 +1638,7 @@ public class DataBaseHelper {
 		}
 
 		return result;
-	}
+			}
 
 	/**
 	 * Clear old notifications
@@ -1252,15 +1705,25 @@ public class DataBaseHelper {
 		emptyTable(Global.DB_TABLE_GROUPS);
 		emptyTable(Global.DB_TABLE_PRACTICE_SESSIONS);
 		emptyTable(Global.DB_TABLE_ROLLCALL);
+		emptyTable(Global.DB_TABLE_GROUP_TYPES);
+		emptyTable(Global.DB_TABLE_GROUPS_GROUPTYPES);
 		compactDB();
 
 		// Removes users photos from external storage (Android 2.2 or higher only)
 		if(android.os.Build.VERSION.SDK_INT >= android.os.Build.VERSION_CODES.FROYO) {
-			File dir = db.getContext().getExternalFilesDir(null);
-			String [] children = dir.list();
-			for (int i=0; i < children.length; i++)
-				new File(dir, children[i]).delete();
+			File externalPath = Environment.getExternalStorageDirectory();
+			String packageName = db.getContext().getPackageName();
+			File dir = new File(externalPath.getAbsolutePath() + "/Android/data/" + packageName+ "/");
+			//File dir = db.getContext().getExternalFilesDir(null);
+			if(dir != null){
+				String [] children = dir.list();
+				if(children != null)
+					for (int i=0; i < children.length; i++){
+						File childrenFile = new File(dir,children[i]);
+						if(childrenFile.exists()) childrenFile.delete();
+					}
 			}
+		}
 	}
 
 	/**
@@ -1299,7 +1762,96 @@ public class DataBaseHelper {
 	public void upgradeDB(Context context) throws XmlPullParserException, IOException {    	
 		//cleanTables();    	
 		//initializeDB();
-		compactDB();
+
+		/* 
+		 * Modify database keeping data:
+		 * 1. Create temporary table __DB_TABLE_GROUPS (with the new model)
+		 * 2. insert in the temporary table all the data (in the new model) from the old table
+		 * 3. drop table DB_TABLE_GROUPS
+		 * 4. create DB_TABLE_GROUPS with the new model. 
+		 * 5. insert in DB_TABLE_GROUPS all the data from __DB_TABLE_GROUPS
+		 * 6. insert in DB_TABLE_GROUPS_GROUPTYPES the relationships between the deleted groups and group types
+		 * 7. drop __DB_TABLE_GROUPS
+		 * Just to modify database without to keep data just 7,6.
+		 * 
+		 * */
+
+
+		/* From version 11 to 12 
+		 * changes on courses table:
+		 * - old field name is erased
+		 * The rest of the changes are only new fields and they are added automatic by Dataframework. */
+		Cursor dbCursor = db.getDB().query(Global.DB_TABLE_COURSES, null, null, null, null, null, null);
+		String[] columnNames = dbCursor.getColumnNames();
+		boolean found = false;
+		int i = 0;
+		while(i < columnNames.length && !found){
+			if(columnNames[i].compareTo("name") == 0) found = true;
+			++i;			
+		}
+		if(found){
+			//without to keep data 
+			db.getDB().execSQL( "DROP TABLE " + Global.DB_TABLE_COURSES + ";");//+
+					db.getDB().execSQL("CREATE TABLE "+ Global.DB_TABLE_COURSES
+					+ " (_id integer primary key autoincrement, id long, userRole integer,shortName text, fullName text);");
+			//Keeping data (It will have columns without data):
+			/*
+			 * db.getDB().execSQL("CREATE TEMPORARY TABLE __"+ Global.DB_TABLE_COURSES
+			+ " (_id integer primary key autoincrement, id long, userRole integer,"
+            + " shortName text, fullName text); ");
+	db.getDB().execSQL(
+            "INSERT INTO __" + Global.DB_TABLE_COURSES + " SELECT _id, id, userRole, name, name  "
+           + " FROM "+ Global.DB_TABLE_COURSES + ";");
+	db.getDB().execSQL( "DROP TABLE " + Global.DB_TABLE_COURSES + ";");
+	db.getDB().execSQL("CREATE TABLE "+ Global.DB_TABLE_COURSES
+			+ " (_id integer primary key autoincrement, id long, userRole integer,"
+            + " shortName text, fullName text); ");
+	db.getDB().execSQL(
+            "INSERT INTO " + Global.DB_TABLE_COURSES + " SELECT _id, id, userRole, shortName, fullName  "
+           + " FROM __"+ Global.DB_TABLE_COURSES + ";");*/
+
+		}
+
+		dbCursor = db.getDB().query(Global.DB_TABLE_COURSES, null, null, null, null, null, null);
+		columnNames = dbCursor.getColumnNames();
+
+		/* version 12 - 13
+		 * changes on groups table: 
+		 * - old field groupCode is now id
+		 * - old field groupTypeCode is erased 
+		 * - old field groupTypeName is erased
+		 * The rest of the changes are only new fields and they are added automatic by Dataframework. 
+		 * */
+		dbCursor = db.getDB().query(Global.DB_TABLE_GROUPS, null, null, null, null, null, null);
+		columnNames = dbCursor.getColumnNames();
+		found = false;
+		i = 0;
+		while(i < columnNames.length && !found){
+			if(columnNames[i].compareTo("groupCode") == 0) found = true;
+			++i;			
+		}
+		if(found){
+			//without to keep data 
+			db.getDB().execSQL( "DROP TABLE " + Global.DB_TABLE_GROUPS + ";");
+			db.getDB().execSQL("CREATE TABLE " + Global.DB_TABLE_GROUPS+ " (_id integer primary key autoincrement, id long, groupName text, maxStudents integer,"
+	                + " students integer, open integer, fileZones integer, member integer); ");
+		/*db.getDB().execSQL(
+				"CREATE TEMPORARY TABLE __"+ Global.DB_TABLE_GROUPS
+				+ " (_id integer primary key autoincrement, id long, groupName text, maxStudents integer,"
+                + " students integer, open integer, fileZones integer, member integer); ");
+		db.getDB().execSQL(
+                 "INSERT INTO __" + Global.DB_TABLE_GROUPS + " SELECT _id, groupCode, groupName, maxStudents,  "
+                + "students, open, fileZones, member FROM "+ Global.DB_TABLE_GROUPS + ";");
+		db.getDB().execSQL( "DROP TABLE " + Global.DB_TABLE_GROUPS + ";");
+		db.getDB().execSQL("CREATE TABLE " + Global.DB_TABLE_GROUPS+ " (_id integer primary key autoincrement, id long, groupName text, maxStudents integer,"
+                + " students integer, open integer, fileZones integer, member integer); ");
+        db.getDB().execSQL("INSERT INTO " + Global.DB_TABLE_GROUPS + " SELECT _id, id, groupName, maxStudents,  "
+                + "students, open, fileZones, member FROM __"+ Global.DB_TABLE_GROUPS + ";");
+        db.getDB().execSQL( "DROP TABLE __" + Global.DB_TABLE_GROUPS + ";");*/
+
+		}
+		dbCursor = db.getDB().query(Global.DB_TABLE_GROUPS, null, null, null, null, null, null);
+		columnNames = dbCursor.getColumnNames();
 
 		/*db.getDB().execSQL("CREATE TEMPORARY TABLE __"
                 + Global.DB_TABLE_NOTIFICATIONS
@@ -1325,6 +1877,9 @@ public class DataBaseHelper {
 		deleteTable(Global.DB_TABLE_GROUPS);
 		deleteTable(Global.DB_TABLE_PRACTICE_SESSIONS);
 		deleteTable(Global.DB_TABLE_ROLLCALL);
+		deleteTable(Global.DB_TABLE_GROUP_TYPES);
+		deleteTable(Global.DB_TABLE_GROUPS_GROUPTYPES);
+		
 
         db.createTables();
 
@@ -1332,5 +1887,7 @@ public class DataBaseHelper {
                 + "userSurname1, userSurname2, userFirstname, location, summary, status, content FROM __"
                 + Global.DB_TABLE_NOTIFICATIONS + ";"
                 + "DROP TABLE __" + Global.DB_TABLE_NOTIFICATIONS + ";");*/
+
+		compactDB();
 	}
 }
